syntax = "proto3";

package th.co.wedev.polybus.example;

option csharp_namespace = "Polybus.Example";

import "google/protobuf/timestamp.proto";

message Person {
  int32 id = 1;
  string name = 2;
  repeated string emails = 3;
  repeated PhoneNumber phones = 4;
  google.protobuf.Timestamp last_updated = 5;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }
}

message AddressBook {
  repeated Person people = 1;
}

message StreetAddress {
  string state = 1;
}
